RESOLVED FIXED309339
RTCPeerConnection should not fire track events for already stopped transceivers
https://bugs.webkit.org/show_bug.cgi?id=309339
Summary RTCPeerConnection should not fire track events for already stopped transceivers
youenn fablet
Reported 2026-03-06 00:59:09 PST
RTCPeerConnection should not surface new transceivers that are already stopped
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-06 00:59:21 PST
youenn fablet
Comment 2 2026-03-06 01:02:26 PST
youenn fablet
Comment 3 2026-03-06 05:02:04 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/58332
EWS
Comment 4 2026-03-12 01:44:10 PDT
Committed 309125@main (a22e10319571): <https://commits.webkit.org/309125@main> Reviewed commits have been landed. Closing PR #60051 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.