RTCPeerConnection should not fire track events for already stopped transceivers rdar://171883768 https://bugs.webkit.org/show_bug.cgi?id=309339

Reviewed by Eric Carlson.

Align with other browsers on not surfacing a track belonging to a receiver that is associated with a new m-section that is rejected.
According the spec, we should use the direction and streams ids parameters to do so.
Oour stream ids should be empty in that case, but we do not have that handling in LibWebRTCMediaEndpoint.
Instead, we just check whether the transceiver is stopped, ie the m-section is rejected.

Covered by rebased test.

Canonical link: https://commits.webkit.org/309125@main